--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,10 @@
     </nav>
 
     <section>
-
+         <h1>Welcome To The Blog</h1>
+         <p>
+             Under Construction - 2017
+         </p>
     </section>
 
     <!--   <div class="container">
